--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,9 +4,10 @@
     margin: 0;
 }
 
+/* add for scaling */
 body {
     background-color: #d9dcd6;
-    min-width: 900px;
+    min-width: 90vw;
 }
 
 .header {
@@ -206,3 +207,5 @@ p {
 .footer h2 {
     font-size: 20px;
 }
+
+
