--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -60,7 +60,7 @@ p {
 }
 
 .hero {
-    height: 800px;
+    height: 50vw;
     width: 100%;
     margin-bottom: 25px;
     background-image: url("../images/digital-marketing-meeting.jpg");
