--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,23 +8,23 @@ body {
   background-color: #d9dcd6;
 }
 
-header {
+.header {
   padding: 20px;
   font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
   background-color: #2a607c;
   color: #ffffff;
 }
 
-header h1 {
+.header h1 {
   display: inline-block;
   font-size: 48px;
 }
 
-header h1 .seo {
+.header h1 .seo {
   color: #d9dcd6;
 }
 
-header nav {
+.header div {
   padding-top: 15px;
   margin-right: 20px;
   float: right;
@@ -32,11 +32,11 @@ header nav {
   font-size: 20px;
 }
 
-header nav ul {
+.header div ul {
   list-style-type: none;
 }
 
-header nav ul li {
+.header div ul li {
   display: inline-block;
   margin-left: 25px;
 }
@@ -50,7 +50,7 @@ p {
   font-size: 16px;
 }
 
-main {
+.hero {
   height: 800px;
   width: 100%;
   margin-bottom: 25px;
@@ -69,13 +69,13 @@ main {
   margin-left: 25px;
 }
 
-section {
+.content {
   width: 75%;
   display: inline-block;
   margin-left: 20px;
 }
 
-aside {
+.benefits {
   margin-right: 20px;
   padding: 20px;
   clear: both;
