--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,7 +15,7 @@ header {
   color: #ffffff;
 }
 
-header h1 {
+h1 {
   display: inline-block;
   font-size: 48px;
 }
@@ -24,7 +24,7 @@ span {
   color: #d9dcd6;
 }
 
-header nav {
+nav {
   padding-top: 15px;
   margin-right: 20px;
   float: right;
@@ -32,11 +32,11 @@ header nav {
   font-size: 20px;
 }
 
-header nav ul {
+ul {
   list-style-type: none;
 }
 
-header nav ul li {
+li {
   display: inline-block;
   margin-left: 25px;
 }
