--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -107,8 +107,23 @@ section img {
   max-width: 150px;
 }
 
-
-.services {
+#search-engine-optimization {
+  margin-bottom: 20px;
+  padding: 50px;
+  height: 300px;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  background-color: #0072bb;
+  color: #ffffff;
+}
+#online-reputation-management {
+  margin-bottom: 20px;
+  padding: 50px;
+  height: 300px;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  background-color: #0072bb;
+  color: #ffffff;
+}
+#social-media-marketing {
   margin-bottom: 20px;
   padding: 50px;
   height: 300px;
@@ -117,10 +132,7 @@ section img {
   color: #ffffff;
 }
 
-
-
-
-.services img {
+main img {
   max-height: 200px;
 }
 
