--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -50,7 +50,7 @@ p {
   font-size: 16px;
 }
 
-article {
+textarea {
   height: 800px;
   width: 100%;
   margin-bottom: 25px;
@@ -132,7 +132,7 @@ section img {
   color: #ffffff;
 }
 
-main img {
+img {
   max-height: 200px;
 }
 
