--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -60,12 +60,7 @@ summary {
   background-position: center;
 }
 
-#search-engine-optimization img {
-  float: left;
-  margin-right: 25px;
-}
-
-#social-media-marketing img {
+article img {
   float: left;
   margin-right: 25px;
 }
@@ -108,14 +103,6 @@ section img {
   max-width: 150px;
 }
 
-#search-engine-optimization {
-  margin-bottom: 20px;
-  padding: 50px;
-  height: 300px;
-  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
-  background-color: #0072bb;
-  color: #ffffff;
-}
 #online-reputation-management {
   margin-bottom: 20px;
   padding: 50px;
@@ -124,7 +111,7 @@ section img {
   background-color: #0072bb;
   color: #ffffff;
 }
-#social-media-marketing {
+article {
   margin-bottom: 20px;
   padding: 50px;
   height: 300px;
